--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <li>Docker</li>
         <li>Ansible</li>
         <li>Integração Contínua. e batatinha quando nasce</li>
+	<li>Kubernetes</li>
     </ul>
 </body>
 </html>
