--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <ul>
         <li>Vagrant</li>
         <li>Docker</li>
-        <li>Ansible</li>
+        <li>Ansibosta</li>
         <li>Integração Contínua. e batatinha quando nasce</li>
     </ul>
 </body>
