--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <ul>
         <li>Vagrant</li>
         <li>Docker: Criando containers sem dor de cabeça</li>
-        <li>Ansible IaC</li>
+        <li>Ansible</li>
         <li>Integração Contínua. e batatinha quando nasce</li>
     	<li>Kubernetes</li>
     </ul>
